Add a template for the links page

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,4 +30,15 @@ main {
     </li>
     % endfor
   </ul>
+
+  <h2>Addendum</h2>
+
+  <ul>
+    <li>
+      <a href='https://groups.google.com/d/forum/cmaa-computer-literacy-course'>Course Mailing List</a>
+    </li>
+    <li>
+      <a href='links/'>Links to Useful Resources</a>
+    </li>
+  </ul>
 </main>
